On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   Project.Structure.txt
	new file:   Run_tests_commands.txt
	new file:   pytest.ini
	new file:   src/config.py
	modified:   src/config.yaml
	new file:   src/containers.py
	modified:   src/crew_runner.py
	new file:   src/error_handling.py
	modified:   src/main.py
	modified:   src/search_tool.py
	modified:   src/sec_tools.py
	modified:   src/task_manager.py
	new file:   tests/conftest.py
	new file:   tests/e2e/test_main.py
	new file:   tests/integration/test_search_tool.py
	new file:   tests/integration/test_sec_tools.py
	new file:   tests/unit/test_agent_manager.py
	new file:   tests/unit/test_crew_runner.py
	new file:   tests/unit/test_task_manager.py

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -21,6 +21,7 @@ search_result_limit: 100  # Number of characters to log from search results
 sec_form_types:
   - "10-Q"
   - "10-K"
+max_concurrent_requests: 5
 
 # Embedding settings
 embedding_model: "llama3:latest"
