--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,217 @@
-crewai
-langchain
-langchain_community
-pydantic
-structlog
-PyYAML
-python-dotenv
-aiohttp
-sec_api
-unstructured
-faiss-cpu
-dependency_injector
-pytest
-black
-flake8
-mypy
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.2
+annotated-types==0.7.0
+anyio==4.4.0
+appdirs==1.4.4
+asgiref==3.8.1
+attrs==23.2.0
+backoff==2.2.1
+bcrypt==4.1.3
+beautifulsoup4==4.12.3
+black==24.4.2
+boto3==1.34.136
+botocore==1.34.136
+Brotli==1.1.0
+build==1.2.1
+cachetools==5.3.3
+certifi==2024.6.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+clarifai==10.5.3
+clarifai-grpc==10.5.4
+click==8.1.7
+cohere==5.5.8
+colorama==0.4.6
+coloredlogs==15.0.1
+contextlib2==21.6.0
+crewai==0.35.3
+cryptography==42.0.8
+dataclasses-json==0.6.7
+deepdiff==7.0.1
+dependency-injector==4.41.0
+Deprecated==1.2.14
+distro==1.9.0
+dnspython==2.6.1
+docstring_parser==0.16
+email_validator==2.2.0
+embedchain==0.1.113
+embedchain-crewai==0.1.114
+emoji==2.12.1
+faiss-cpu==1.8.0.post1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fastavro==1.9.4
+filelock==3.15.4
+filetype==1.2.0
+flake8==7.1.0
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.19.1
+google-auth==2.30.0
+google-cloud-aiplatform==1.57.0
+google-cloud-bigquery==3.25.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.12.3
+google-cloud-storage==2.17.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.2
+gptcache==0.1.43
+greenlet==3.0.3
+grpc-google-iam-v1==0.13.1
+grpcio==1.64.1
+grpcio-status==1.62.2
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+httpx-sse==0.4.0
+huggingface-hub==0.23.4
+humanfriendly==10.0
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+iniconfig==2.0.0
+inquirerpy==0.3.4
+instructor==1.3.3
+Jinja2==3.1.4
+jiter==0.4.2
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==3.0.0
+jsonref==1.1.0
+kubernetes==30.1.0
+langchain==0.1.20
+langchain-cohere==0.1.5
+langchain-community==0.0.38
+langchain-core==0.1.52
+langchain-openai==0.1.7
+langchain-text-splitters==0.0.2
+langdetect==1.0.9
+langsmith==0.1.82
+lxml==5.2.2
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mccabe==0.7.0
+mdurl==0.1.2
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.5
+mutagen==1.47.0
+mypy==1.10.1
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+nltk==3.8.1
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.18.1
+openai==1.35.7
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-exporter-otlp-proto-http==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-instrumentation-asgi==0.46b0
+opentelemetry-instrumentation-fastapi==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+opentelemetry-util-http==0.46b0
+ordered-set==4.1.0
+orjson==3.10.5
+overrides==7.7.0
+packaging==23.2
+parameterized==0.9.0
+pathspec==0.12.1
+pfzy==0.3.4
+pillow==10.4.0
+platformdirs==4.2.2
+pluggy==1.5.0
+posthog==3.5.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==4.25.3
+psutil==6.0.0
+pulsar-client==3.5.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.12.0
+pycparser==2.22
+pycryptodomex==3.20.0
+pydantic==2.7.4
+pydantic-settings==2.3.4
+pydantic_core==2.18.4
+pyflakes==3.2.0
+PyGithub==1.59.1
+Pygments==2.18.0
+PyJWT==2.8.0
+PyNaCl==1.5.0
+pypdf==4.2.0
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+pyreadline3==3.4.1
+pysbd==0.3.4
+pytest==8.2.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-iso639==2024.4.27
+python-magic==0.4.27
+python-multipart==0.0.9
+python-rapidjson==1.18
+PyYAML==6.0.1
+rapidfuzz==3.9.3
+regex==2023.12.25
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.7.1
+rsa==4.9
+s3transfer==0.10.2
+schema==0.7.5
+sec-api==1.0.18
+shapely==2.0.4
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.31
+starlette==0.37.2
+structlog==24.2.0
+sympy==1.12.1
+tabulate==0.9.0
+tenacity==8.4.2
+tiktoken==0.7.0
+tokenizers==0.19.1
+tqdm==4.66.4
+tritonclient==2.47.0
+typer==0.12.3
+types-requests==2.32.0.20240622
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+ujson==5.10.0
+unstructured==0.14.9
+unstructured-client==0.23.8
+urllib3==2.2.2
+uvicorn==0.30.1
+watchfiles==0.22.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==12.0
+wrapt==1.16.0
+yarl==1.9.4
+youtube-transcript-api==0.6.2
+yt-dlp==2023.12.30
+zipp==3.19.2
